--- a/src/main/resources/templates/listTeachers.html
+++ b/src/main/resources/templates/listTeachers.html
@@ -17,6 +17,7 @@
         </form>
     </li>
 </ul>
-<a href="/teachers/new">Добавить нового преподавателя</a>
+<a href="/teachers/new">Добавить нового преподавателя</a><br>
+<a href="/register/all">ALL taecher</a>
 </body>
 </html>
