--- a/src/main/resources/templates/listTeachers.html
+++ b/src/main/resources/templates/listTeachers.html
@@ -18,6 +18,6 @@
     </li>
 </ul>
 <a href="/teachers/new">Добавить нового преподавателя</a><br>
-<a href="/register/all">ALL taecher</a>
+<a href="/register/all">ALL Client</a>
 </body>
 </html>
