--- a/src/main/resources/templates/allClient.html
+++ b/src/main/resources/templates/allClient.html
@@ -1,40 +1,45 @@
 
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Clients</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<form action="/register/search" method="get">
-    <label for="name">Search by Name:</label>
-    <input type="text" id="name" name="name" required>
-    <button type="submit">Search</button>
-</form>
+<div class="container mt-4">
+    <form action="/register/search" method="get" class="mb-4">
+        <div class="form-group">
+            <label for="name">Search by Name:</label>
+            <input type="text" id="name" name="name" class="form-control" required placeholder="Введите имя">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
 
-<h1>All Clients</h1>
-<table border="1">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Phone</th>
-        <th>Email</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- Iterate over the clients using Thymeleaf -->
-    <tr th:each="client : ${clients}">
-        <td th:text="${client.id}">ID</td>
-        <td th:text="${client.name}">Name</td>
-        <td th:text="${client.phone}">Phone</td>
-        <td th:text="${client.email}">Email</td>
-    </tr>
-    </tbody>
-</table>
+    <h1>All Clients</h1>
+    <table class="table table-bordered">
+        <thead class="thead-light">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Iterate over the clients using Thymeleaf -->
+        <tr th:each="client : ${clients}">
+            <td th:text="${client.id}">ID</td>
+            <td th:text="${client.name}">Name</td>
+            <td th:text="${client.phone}">Phone</td>
+            <td th:text="${client.email}">Email</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
