--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('/danceTeam.jpeg'); /* Добавьте ваше фоновое изображение */
+            background-image: url('/pic/danceTeam.jpeg'); /* Добавьте ваше фоновое изображение */
             background-size: cover;
             background-position: center;
             display: flex;
