--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -123,16 +123,17 @@
 <nav class="navigation">
     <ul>
         <li><a href="/">Главная</a></li>
-        <li><a href="/teachers">О нас</a></li>
         <li><a href="#services">Услуги</a></li>
         <li><a href="#contact">Контакты</a></li>
         <li><a href="/register">Регистрация</a></li>
+        <li><a href="/teachers">Admin Page</a></li>
+
     </ul>
 </nav>
 
 <header class="header">
     <div class="header-content">
-        <img src="/danceTeam.jpeg" alt="Фото школы танцев" class="header-photo">
+        <img src="/pic/danceTeam.jpeg" alt="Фото школы танцев" class="header-photo">
         <div class="header-text">
             <h1>Добро пожаловать в нашу школу танцев RUN WAY !</h1>
             <p>Учитесь танцевать с лучшими инструкторами. Мы предлагаем широкий выбор танцевальных направлений для всех возрастов и уровней подготовки.</p>
