--- a/src/main/resources/templates/addTeacher.html
+++ b/src/main/resources/templates/addTeacher.html
@@ -13,7 +13,7 @@
     <input type="text" id="name" name="name" required>
 
     <label for="imageUrl">URL изображения:</label>
-    <input type="text" id="imageUrl" name="imageUrl" required>
+    <input type="text" id="imageUrl" name="imageUrl" required placeholder="/pic/**">
 
     <label for="description">Описание:</label>
     <textarea id="description" name="description" required></textarea>
