--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,13 +46,16 @@
         }
 
         .login-container {
-            background-color: white;
+
             padding: 40px;
             border-radius: 10px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
             max-width: 400px;
             width: 100%;
             text-align: center;
+
+            background: rgba(255, 255, 255, 0.6); /* Полупрозрачный белый фон */
+            backdrop-filter: blur(10px); /* Эффект блюра */
         }
 
         .login-container h1 {
@@ -89,7 +92,7 @@
         }
 
         .login-button:hover {
-            background-color: #74b9ff;
+            background-color: #39e3b6;
         }
 
         .message {
@@ -102,7 +105,7 @@
 
 <body>
 <div class="login-container">
-    <h1>Please Log In</h1>
+    <h1>Вход Для Администратора</h1>
     <div th:if="${param.error}" class="message">
         Invalid username and password.
     </div>
